Prevent message preview copy from overlapping - bump up bottom padding [ch1086]

--- a/src/styles/leo-provider-app.styl
+++ b/src/styles/leo-provider-app.styl
@@ -399,7 +399,7 @@
 
   .list-group-item > .escalated-to {
     position: absolute;
-    bottom: 10px;
+    bottom: 15px;
     right: 20px;
     text-transform: uppercase;
 
